#------------------------------------------------------------------------------
# 파일명: pyproject.toml
# 이 파일은 Poetry 프로젝트 설정 파일이다.
# - 프로젝트 이름, 버전, 설명
# - 포함할 파이썬 폴더
# - 필요한 외부 패키지 목록
# - 프로젝트 빌드 설정
# 등을 정의한다.
#------------------------------------------------------------------------------

[tool.poetry]

name = "todo" # 프로젝트 이름 (폴더 이름과는 무관)
version = "0.1.0" # 버전 번호 (업데이트 시 변경)
description = "" # 프로젝트에 대한 간단한 설명
authors = ["Sihyun <redtomato556778@gmail.com>"] # * 만든 사람 정보 (이름, 이메일)
readme = "README.md" # * 프로젝트 소개 문서 (보통 깃허브 첫 화면에 보여질 내용)

# * 파이썬 코드가 들어 있는 폴더(패키지)를 지정한다.
# - 실제 FastAPI API 코드는 'api' 폴더에 작성되므로 그 폴더를 포함시킴
packages = [
    {include = "api"} # * 'api' 폴더를 프로젝트에 포함함
]

#------------------------------------------------------------------------------
# 이 프로젝트를 실행하기 위해 꼭 필요한 외부 패키지들 (의존성 목록)
#------------------------------------------------------------------------------
[tool.poetry.dependencies]

python = "^3.12" # * 이 프로젝트는 파이썬 3.12 이상 버전에서 작동하도록 설정

# * FastAPI: 웹 API 서버를 만들기 위한 주요 프레임워크
fastapi = "^0.115.12"

# * Uvicorn: FastAPI 앱을 실행하기 위한 웹 서버 도구
# - "standard" 옵션을 통해 자동 재시작, 로깅, 보안 등 추가 기능도 포함됨
uvicorn = {extras = ["standard"], version = "^0.34.0"}

# * SQLAlchemy: ORM 도구
# - SQL을 직접 쓰지 않고 파이썬 코드로 테이블을 만들고 데이터를 조작할 수 있음
sqlalchemy = "^2.0.40"

# * asyncpg: PostgreSQL 데이터베이스에 비동기 방식으로 연결할 수 있는 드라이버
# - 'migrate_db.py' 같은 초기화 스크립트에서 사용됨
# - asyncpg가 아닌 일반 DB 연결(create_engine) 시 사용
psycopg2-binary = "^2.9.10"

#------------------------------------------------------------------------------
# 프로젝트를 빌드(포장하거나 배포)할 때 사용하는 설정
# - Poetry 내부적으로 사용하는 빌드 도구 지정
#------------------------------------------------------------------------------
[build-system]

requires = ["poetry-core"] # * 빌드 과정에서 필요한 핵심 도구
build-backend = "poetry.core.masonry.api" # * 실제 빌드를 수행하는 백엔드 도구